--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "del-cli dist && eleventy && npm-run-all build:css build:html",
+    "build": "yarn data && del-cli dist && eleventy && npm-run-all build:css build:html",
     "build:css": "cross-env NODE_ENV=production postcss src/_css/app.css -o src/_includes/css/style.min.css",
     "build:html": "cross-env ELEVENTY_ENV=production eleventy",
     "watch": "npm-run-all --parallel watch:css watch:html",
