--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "npm-run-all --parallel watch:css watch:html",
     "watch:css": "postcss src/_css/app.css -o src/assets/style.css --watch",
     "watch:html": "eleventy --serve --port=1994",
-    "start": "del-cli dist && npm run watch",
+    "start": "yarn data && del-cli dist && npm run watch",
     "data": "node src/_utils/getFiles"
   },
   "devDependencies": {
